<resources>
    <string name="app_name">供销通</string>
    <string name="login_name">请输入您的手机号</string>
    <string name="login_pass">请输入密码，长度6-12位</string>
    <string name="login_code">请输入验证码</string>
    <string name="login_forget">忘记密码&#063;</string>
    <string name="login_button">立即登录</string>
    <string name="title_forget">找回密码</string>
    <string name="forget_phone">请输入您已注册的手机号</string>
    <string name="next">下一步</string>
    <string name="forget_sent">验证码已发送至</string>
    <string name="resend">重新发送</string>
    <string name="forget_pass">输入新密码，长度6-12位</string>
    <string name="done">完成</string>
    <string name="home">首页</string>
    <string name="purchase">采购单</string>
    <string name="order">订单</string>
    <string name="user">我的</string>
    <string name="withdraw">提现</string>
    <string name="recharge">充值</string>
    <string name="currency">总资产 (元)</string>
    <string name="goods_man">商品管理</string>
    <string name="my_order">我的订单</string>
    <string name="order_all">全部&#160;(&#160;x&#160;)</string>
    <string name="order_unpay">待付款&#160;(&#160;x&#160;)</string>
    <string name="order_unreceive">待收货&#160;(&#160;x&#160;)</string>
    <string name="order_refund">退货/退款&#160;(&#160;x&#160;)</string>
    <string name="order_done">已完成&#160;(&#160;x&#160;)</string>
    <string name="blank">银行卡&#160;(&#160;x&#160;)</string>
    <string name="my_address">收货地址&#160;(&#160;x&#160;)</string>
    <string name="my_account">我的账户</string>
    <string name="my_blank">我的银行卡</string>
    <string name="change_name">修改登录名</string>
    <string name="change_phone">修改登录手机号</string>
    <string name="change_pass">修改登录密码</string>
    <string name="sup_order">供应商订单</string>
    <string name="pur_order">采购商订单</string>
    <string name="all_order">查看全部</string>
    <string name="unpay_order">待付款</string>
    <string name="unrecieve_order">待收货</string>
    <string name="refund_order">退货/退款中</string>
    <string name="done_order">已完成</string>
    <string name="user_center">个人中心</string>
    <string name="bank_added">已添加银行卡&#160;(&#160;x张&#160;)</string>
    <string name="add_bank">添加银行卡</string>
    <string name="money">金额</string>
    <string name="recharge_money">请输入充值金额</string>
    <string name="recharge_away">选择充值方式：</string>
    <string name="pay_away">选择支付方式：</string>
    <string name="recharge_wechat">微信充值</string>
    <string name="pay_wechat">微信支付</string>
    <string name="recharge_alipay">支付宝充值</string>
    <string name="pay_alipay">支付宝支付</string>
    <string name="pay_balance">账户余额支付</string>
    <string name="pay_online">在线支付</string>
    <string name="recharge_phone">手机账号充值</string>
    <string name="recharge_login">手机账号登录</string>
    <string name="phone">手机号</string>
    <string name="pass">密码</string>
    <string name="login">登录</string>
    <string name="pay_phone">付款账户：</string>
    <string name="balance_account">账户余额</string>
    <string name="balance_available">(&#160;可用余额x元&#160;)</string>
    <string name="recharge_button">确认充值</string>
    <string name="cashier_counter">点窝收银台</string>
    <string name="login_phone">请输入手机号</string>
    <string name="again_pass">请再次输入新密码</string>
    <string name="title_change_pass">修改密码</string>
    <string name="title_change_phone">修改手机号</string>
    <string name="new_phone">请输入新手机号</string>
    <string name="card_user">请输入新手机号</string>
    <string name="card_no">请输入新手机号</string>
    <string name="input_card_user">请输入持卡人姓名</string>
    <string name="input_card_no">请输入持卡人对应的卡号</string>
    <string name="input_card_phone">请输入关联银行卡的手机号</string>
    <string name="withdraw_money">提现金额</string>
    <string name="balance_withdraw">余额提现</string>
    <string name="available_money">可用余额&#160;x元</string>
    <string name="bank_select">选择银行卡</string>
    <string name="banks">银行卡</string>
    <string name="delete">删除</string>
    <string name="goods_manage">商品管理</string>
    <string name="goods_search">请输入关键字搜索</string>
    <string name="search">搜索</string>
    <string name="shelf">下架</string>
    <string name="stock">库存&#160;：</string>
    <string name="MOQ">起订量&#160;：</string>
    <string name="title_order_all">全部订单</string>
    <string name="title_order_unpay">待付款</string>
    <string name="title_order_unreceive">待收货</string>
    <string name="title_order_refund">退款中</string>
    <string name="title_order_refund_purchase">退货/退款中</string>
    <string name="title_order_done">已完成</string>
    <string name="deliver">发货</string>
    <string name="merchant_feedback">商家反馈</string>
    <string name="logistics_info">物流信息</string>
    <string name="logistics_company">物流公司&#160;：</string>
    <string name="logistics_number">物流单号&#160;：</string>
    <string name="confirm">确定</string>
    <string name="submit">提交</string>
    <string name="cancel">取消</string>
    <string name="delete_or_agree">是否确定删除该订单？</string>
    <string name="refund_or_agree">是否确定同意退款？</string>
    <string name="return_or_agree">是否确定同意退货？</string>
    <string name="refund_or">是否确定退款？</string>
    <string name="receive_or">是否确定收货？</string>
    <string name="return_disagree">不同意退货</string>
    <string name="address_manage">管理收货地址</string>
    <string name="address_choose">选择收货地址</string>
    <string name="title_add_address">添加收货地址</string>
    <string name="title_edit_address">编辑收货地址</string>
    <string name="manage">管理</string>
    <string name="address_add">新增收货地址</string>
    <string name="address_add_new">添加新地址</string>
    <string name="address_no">您还没有专属的收货地址哦&#160;&#160;</string>
    <string name="set_default">设为默认地址</string>
    <string name="name">姓名&#160;&#160;</string>
    <string name="mobile">手机&#160;&#160;</string>
    <string name="area">所属区域&#160;&#160;</string>
    <string name="address">详细地址&#160;&#160;</string>
    <string name="contact">联系人</string>
    <string name="location_info">地址信息</string>
    <string name="save">保存</string>
    <string name="address_name">请填写收货人姓名</string>
    <string name="address_phone">请填写收货手机号码</string>
    <string name="address_area">点击选择</string>
    <string name="address_info">请填写收货人详细地址</string>
    <string name="order_info">订单详情</string>
    <string name="consignee">收件人&#160;:&#160;</string>
    <string name="edit">编辑</string>
    <string name="select">全选</string>
    <string name="total">合计&#160;:&#160;</string>
    <string name="settlement">去结算&#160;(&#160;x&#160;)</string>
    <string name="no_purchase">您的采购单是空的哦&#160;!&#160;赶紧去采购吧&#160;!</string>
    <string name="forward_home">前往首页</string>
    <string name="order_num">订购数量&#160;:&#160;</string>
    <string name="order_no">订单编号&#160;:&#160;</string>
    <string name="return_request">退货申请</string>
    <string name="return_reason">退款原因</string>
    <string name="return_money">退款金额</string>
    <string name="return_depict">退款描述</string>
    <string name="order_depict">订单描述</string>
    <string name="order_confirm">确认订单</string>
    <string name="add_card">添加新卡</string>
    <string name="buy_now">立即购买</string>
    <string name="join_cart">加入采购单</string>
    <string name="order_submit">提交订单</string>
    <string name="real_pay">实付款&#160;:&#160;</string>
    <string name="real_money">应付金额&#160;:&#160;</string>
    <string name="classify">分类</string>
    <string name="merchandise">商品</string>
    <string name="detail">详情</string>
    <string name="no_more_data">没有更多数据了!</string>
    <string name="no_data">暂无数据</string>
    <string name="last_page">最后一页</string>
    <string name="all">全部</string>
    <string name="rmb">￥&#160;</string>
    <string name="bank_number">*&#160;*&#160;*&#160;*&#160;&#160;&#160;&#160;*&#160;*&#160;*&#160;*&#160;&#160;&#160;&#160;*&#160;*&#160;*&#160;*&#160;&#160;&#160;&#160;####</string>
    <string-array name="return_cause">
        <item>商品与描述不符</item>
        <item>商品错发/漏发/少发</item>
        <item>商品质量问题</item>
        <item>其他</item>
    </string-array>
    <string name="order_add_time">订单创建时间&#160;:&#160;</string>
    <string name="order_pay_time">付款时间&#160;:&#160;</string>
    <string name="order_deliver_time">发货时间&#160;:&#160;</string>
    <string name="order_finish_time">成交时间&#160;:&#160;</string>
    <string name="exit">退出登录</string>

</resources>
