<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blank"
    android:orientation="vertical"
    tools:context="com.jsqix.gxt.app.activity.RechargeNext">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/off_50dp"
        android:layout_marginTop="@dimen/off_10dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:padding="@dimen/off_10dp">

        <TextView
            style="@style/BlackText"
            android:layout_width="@dimen/off_60dp"
            android:layout_height="wrap_content"
            android:text="@string/money" />

        <TextView
            android:id="@+id/tv_money"
            style="@style/BlackText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/off_15dp"
            android:text="200.00" />
    </LinearLayout>

    <TextView
        style="@style/LightText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/off_50dp"
        android:gravity="center_vertical"
        android:padding="@dimen/off_10dp"
        android:text="@string/recharge_login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <View style="@style/div_style" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/off_50dp"
            android:padding="@dimen/off_10dp">

            <TextView
                style="@style/BlackText"
                android:layout_width="@dimen/off_60dp"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textSize="@dimen/font_size_16sp" />

            <EditText
                android:id="@+id/et_phone"
                style="@style/EditStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/off_15dp"
                android:background="@null"
                android:hint="@string/login_name" />
        </LinearLayout>

        <View
            style="@style/div_style"
            android:layout_marginLeft="@dimen/off_10dp"
            android:layout_marginRight="@dimen/off_10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/off_50dp"
            android:padding="@dimen/off_10dp">

            <TextView
                style="@style/BlackText"
                android:layout_width="@dimen/off_60dp"
                android:layout_height="wrap_content"
                android:text="@string/pass"
                android:textSize="@dimen/font_size_16sp" />

            <EditText
                android:id="@+id/et_pass"
                style="@style/EditStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/off_15dp"
                android:background="@null"
                android:hint="@string/login_pass" />
        </LinearLayout>

        <View style="@style/div_style" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="@dimen/off_15dp"
        android:text="@string/login_forget" />

    <Button
        android:id="@id/bt_login"
        style="@style/WhiteText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/off_50dp"
        android:layout_marginLeft="@dimen/off_10dp"
        android:layout_marginRight="@dimen/off_10dp"
        android:background="@drawable/round_green"
        android:text="@string/login"
        android:textSize="@dimen/font_size_18sp" />
</LinearLayout>
