<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blank"
    android:orientation="vertical"
    tools:context="com.jsqix.gxt.app.activity.RechargeForget">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/off_20dp">

        <EditText
            android:id="@+id/et_phone"
            style="@style/EditStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/off_50dp"
            android:background="@drawable/round_white"
            android:hint="@string/login_phone"
            android:padding="@dimen/off_10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/off_15dp">

            <EditText
                android:id="@+id/et_code"
                style="@style/EditStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/round_white"
                android:hint="@string/login_code"
                android:padding="@dimen/off_10dp" />

            <Button
                android:id="@+id/et_send"
                android:layout_width="80dp"
                android:layout_height="@dimen/off_40dp"
                android:layout_marginLeft="@dimen/off_20dp"
                android:background="@drawable/round_line_green"
                android:text="@string/resend"
                android:textColor="@color/light_green" />

        </LinearLayout>

        <EditText
            android:id="@+id/et_pass"
            style="@style/EditStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/off_50dp"
            android:layout_marginTop="@dimen/off_15dp"
            android:background="@drawable/round_white"
            android:hint="@string/forget_pass"
            android:padding="@dimen/off_10dp" />

        <EditText
            android:id="@+id/et_pass_again"
            style="@style/EditStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/off_50dp"
            android:layout_marginTop="@dimen/off_15dp"
            android:background="@drawable/round_white"
            android:hint="@string/again_pass"
            android:padding="@dimen/off_10dp" />

        <Button
            android:id="@+id/bt_done"
            style="@style/WhiteText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/off_50dp"
            android:layout_marginTop="@dimen/off_20dp"
            android:background="@drawable/round_green"
            android:text="@string/done"
            android:textSize="@dimen/font_size_18sp" />
    </LinearLayout>
</LinearLayout>
