<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blank"
    android:orientation="vertical"
    tools:context="com.jsqix.gxt.app.fragment.PurchaseFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/title_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/off_50dp">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/off_50dp"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/purchase"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_right"
                style="@style/WhiteText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:drawablePadding="@dimen/off_5dp"
                android:gravity="center"
                android:paddingLeft="@dimen/off_16dp"
                android:paddingRight="@dimen/off_16dp"
                android:text="@string/edit" />
        </RelativeLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <include layout="@layout/layout_listview" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/off_50dp"
            android:background="@color/white">

            <CheckBox
                android:id="@+id/cb_choose"
                style="@style/BlackText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/off_10dp"
                android:button="@null"
                android:drawableLeft="@drawable/address_choose"
                android:drawablePadding="@dimen/off_10dp"
                android:text="@string/select" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">

                <TextView
                    style="@style/BlackText"
                    android:text="@string/total" />

                <TextView
                    android:id="@+id/tv_total"
                    style="@style/GreenText"
                    android:text="¥ 38.70 " />
            </LinearLayout>

            <Button
                android:id="@+id/bt_settle"
                style="@style/WhiteText"
                android:layout_width="@dimen/off_90dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:background="@color/green"
                android:gravity="center"
                android:text="@string/settlement" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin_no_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/off_40dp"
            android:layout_marginTop="@dimen/off_40dp"
            android:text="@string/no_purchase" />

        <Button
            style="@style/WhiteText"
            android:layout_width="@dimen/off_180dp"
            android:layout_height="@dimen/off_40dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/green"
            android:gravity="center"
            android:text="@string/forward_home" />

    </LinearLayout>
</LinearLayout>

