<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            style="@style/div_style"
            android:layout_height="1dp" />

        <RadioGroup
            android:id="@+id/radio_tab"
            android:layout_width="match_parent"
            android:layout_height="@dimen/off_50dp"
            android:checkedButton="@+id/radio_home"
            android:orientation="horizontal"
            android:weightSum="4">

            <RadioButton
                android:id="@+id/radio_home"
                style="@style/radio_navigation_bar_bottom_tab"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@drawable/tab_home"
                android:text="@string/home" />

            <RadioButton
                android:id="@+id/radio_purchase"
                style="@style/radio_navigation_bar_bottom_tab"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@drawable/tab_purchase"
                android:text="@string/purchase" />

            <RadioButton
                android:id="@+id/radio_order"
                style="@style/radio_navigation_bar_bottom_tab"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@drawable/tab_order"
                android:text="@string/order" />

            <RadioButton
                android:id="@+id/radio_user"
                style="@style/radio_navigation_bar_bottom_tab"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@drawable/tab_user"
                android:text="@string/user" />
        </RadioGroup>

    </LinearLayout>
</FrameLayout>